Alignment issue of crown icon fixed on homepage.

--- a/src/components/homepage/style.css
+++ b/src/components/homepage/style.css
@@ -20,6 +20,7 @@
 .popular-slider {
   display: flex;
   padding: 15px 10px;
+  align-items: flex-start;
 }
 .popular-slider img {
   width: 20px;
